# sim-solps

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python_publish.yml
demos/: SolpsInterface_demo.ipynb  ThomsonScattering_demo.ipynb
docs/source/: conf.py  index.rst  interface.rst  thomson.rst
sims/: __init__.py  instruments.py  interface.py  likelihoods.py  thomson.py
sims/instruments/: __init__.py  base.py  thomson.py
tests/: test_thomson.py
