[metadata]
name = sim-solps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/sim-solps
author = Chris Bowman
author_email = chris.bowman.physics@gmail.com
description = Synthetic instrument modelling for SOLPS-ITER
license = MIT
version = 0.1.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/sim-solps
    Tracker = https://github.com/C-bowman/sim-solps/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.8
    scipy >= 1.6.3
    matplotlib >= 3.4.2
    tokamesh >= 0.1.0
    importlib-metadata; python_version < "3.8"

[options.extras_require]
tests =
    pytest >= 3.3.0
    pytest-cov >= 3.0.0
docs =
    sphinx ~= 3.5.4
    sphinx_rtd_theme

[build_sphinx]
source-dir = docs/source